# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.33.7
	Martin Väth <mvath at google.com>:
	- Support relative pathnames in make.conf, see
	  https://github.com/vaeth/eix/issues/57

	Wolfgang Müller (https://github.com/vehk):
	- Add support for italics in COLORSTRING

*eix-0.33.6
	Martin Väth <martin at mvath.de>:
	- meson: rename optimization -> normal-optimization to avoid clash
	- meson: fix message for forced optimization
	- meson: internal: avoid clashing variable name continue, cosmetics

*eix-0.33.5
	Martin Väth <martin at mvath.de>:
	- New search options --{available,installed}-{deps,{,r,p,b}depend}
	- Support SRC_URI, https://bugs.gentoo.org/show_bug.cgi?id=666546
	  In detail: Add SRC_URI, <srcuri> {havesrcuri}, --src-uri,
	  extend DEFAULT_MATCH_FIELD by src-uri, output by default with -vl,
	  output in xml, new xml version 15, new eix database version 38
	- handle installed deps even without DEP
	- default to --with-deps-default --with-required-use-default
	- bugfix: empty LINGUAS w/ meson https://github.com/vaeth/eix/issues/54
	- do not let installed deps default to available deps if DEPS_INSTALLED
	- add yet another ATTRIBUTE_PURE
	- warn about not re-adding the ATTRIBUTE_PURE removed in 0.33.1
	- manpage: add a missing occurrence of BDEPEND
	- Makefile, meson.build: avoid non-ascii symbols

*eix-0.33.4
	Martin Väth <martin at mvath.de>:
	- Bugfix: eix-update: set reponame in version to correctly apply
	  package.mask from overlays https://bugs.gentoo.org/658658
	- Bugfix: do not treat leading * in system entries as part of pattern
	- Bugfix: Read vars like EAPI also with ONLY_KEYWORDS_SLOT.
	  This fixes cache method ebuild* for non-first versions of a package,
	  see https://github.com/vaeth/eix/issues/52
	- Use a variant of Levenshtein (Hirschberg) which requires less memory
	- zsh completion: Use standard style; use eix --format; simplify
	- Minor code simplification

*eix-0.33.3
	Martin Väth <martin at mvath.de>: